# libbcu

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  appveyor.yml
lib/libbcu/: CMakeLists.txt  create_version_h.sh
lib/libbcu/include/: libbcu.h  yml.h
lib/libbcu/msvs/lib/libyaml/: libyaml.vcxproj  libyaml.vcxproj.filters
lib/libbcu/msvs/libbcu/: create_version_h.bat  libbcu.sln  libbcu.vcxproj  libbcu.vcxproj.filters
lib/libbcu/src/: board.c  board.h  chip.c  chip.h  eeprom.c  eeprom.h  libbcu.c  mprint.h  parser.c  parser.h  port.c  port.h  version.h  yml.c  yml.h
msvs/BCU_Terminal/: BCU_Terminal.sln  BCU_Terminal.vcxproj  BCU_Terminal.vcxproj.filters  legacy_bcu.c  legacy_bcu.h
src/: CMakeLists.txt  error_def.h  getopt.c  getopt.h  legacy_bcu.c  legacy_bcu.h  main.c  options.c  options.h
