cmake_minimum_required(VERSION 3.4)

find_package(PkgConfig REQUIRED)
pkg_check_modules(LIBFTDI REQUIRED libftdi1)
pkg_check_modules(LIBYAML REQUIRED yaml-0.1)
pkg_check_modules(LIBUSB REQUIRED libusb-1.0)
include_directories(${LIBUSB_INCLUDE_DIRS} ${LIBFTDI_INCLUDE_DIRS}include ${PROJECT_SOURCE_DIR}/libftdi/src ${LIBYAML_INCLUDEDIR})
INCLUDE_DIRECTORIES(include)
link_directories(${LIBUSB_LIBRARY_DIRS} ${LIBFTDI_LIBRARY_DIRS} ${LIBYAML_LIBRARY_DIRS})

SET(LIBBCU_SRC src/libbcu.c src/board.c src/chip.c src/eeprom.c src/parser.c src/port.c src/yml.c)
ADD_LIBRARY(bcu_shared SHARED ${LIBBCU_SRC})
ADD_LIBRARY(bcu_static STATIC ${LIBBCU_SRC})
SET_TARGET_PROPERTIES(bcu_shared PROPERTIES OUTPUT_NAME "bcu")
SET_TARGET_PROPERTIES(bcu_static PROPERTIES OUTPUT_NAME "bcu")
# SET_TARGET_PROPERTIES(bcu PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# SET_TARGET_PROPERTIES(bcu_static PROPERTIES CLEAN_DIRECT_OUTPUT 1)
# GET_TARGET_PROPERTY(OUTPUT_VALUE bcu_static OUTPUT_NAME)
# MESSAGE(STATUS  "This is the bcu_static OUTPUT_NAME:" ${OUTPUT_VALUE})
SET_TARGET_PROPERTIES(bcu_shared PROPERTIES VERSION 0.1 SOVERSION 1)